[retejo] Changed wiki page, added creators table

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -281,7 +281,7 @@ li.w-p-s-item
   line-height 150%
   margin 0
   text-align center
-  
+
 
 /*
   Blog · Post Viewer
@@ -377,6 +377,15 @@ li.w-p-s-item
   @media only screen and (max-width: 600px)
     img
       width 70vw
+
+.creators-tbl
+  width 50%
+  text-align center
+  border 2px solid #BBBBBB
+  border-collapse collapse
+  th, td
+    border 1px solid #BBBBBB
+    min-width 150px
 /*
   Footer
 */
