--- a/views/wiki/retejo.pug
+++ b/views/wiki/retejo.pug
@@ -20,8 +20,26 @@ block content
     div
       h1 Retejo
     div
-      p Retejo is a collection of art, writings and projects that I would like to share with the world. My own personal expression platform.
+      p Retejo is a collection of media, writings and projects that I would like to share with the world. A personal expression platform.
       p The site is currently hosted using node.js and static webpages written in the Pug template language.
     div
       h2 The Plan
       p Eventually to be a lightweight application which will serve webpages that pull information from flat databases. While it's' currently written in Node.JS and Pug the final 1.0 version will simply be a router and a renderer which points to template files that watch for new files and build their content when there is an update.
+
+    div
+      h2 Externals
+      p This site uses and builds upon several external projects, below is a table of things being used along with their creators. Go check them out!
+      table(class='creators-tbl')
+        tr
+          th Resource
+          th Type
+          th Creator
+        tr
+          td Battalion Mono
+          td Font
+          td <a class='outbound' href='https://craze.co.uk'>Rutherford Craze</a>
+        tr
+          td Tablatal
+          td Flat File Database
+          td <a class='outbound' href='https://wiki.xxiivv.com/'>Devine Lu Linvega</a>
+
