[head] Added afiur to head

--- a/views/templates/layout.pug
+++ b/views/templates/layout.pug
@@ -20,6 +20,9 @@ html
     link(rel='apple-touch-icon', sizes='114x114', href='/images/favicons/favicon-114-precomposed.png')
     link(rel='apple-touch-icon', sizes='180x180', href='/images/favicons/favicon-180-precomposed.png')
     link(rel='apple-touch-icon', sizes='72x72', href='/images/favicons/favicon-72-precomposed.png')
+    script(type="text/javascript", src='/javascripts/afiur.js')
+    script.
+        var afiur = new Afiur()
     link(rel='apple-touch-icon', href='/images/favicons/favicon-57.png')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
   body
