[about] Changed toot's link, age and spacing in the link list

--- a/views/about.pug
+++ b/views/about.pug
@@ -5,14 +5,14 @@ block content
     img(src='/images/me/self_20180916.jpg' title='A Person, name of Driscoll')
   .about
     h1 Cory Driscoll
-    p(style='text-align: center') 23-ish web dude, drinks teas and presses keys
-    p(style='text-align: center') Sometimes ventures off the island
+    p(style='text-align: center') 24-ish web dude, drinks teas and presses keys
+    p(style='text-align: center') Sometimes ventures outside
     div(class='social')
-      span emails&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
+      span emails&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
       a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
       br
-      span toots&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
-      a(href='https://sunbeam.city/@drisc' class='outbound') @drisc@sunbeam.city
+      span toots&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
+      a(href='https://merveilles.town/users/drisc' class='outbound') @drisc@merveilles.town
       br
-      span tweets&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
+      span tweets&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
       a(href='https://twitter.com/driscio' class='outbound') @driscio
