[about] added new link for github and changed styling

--- a/views/about.pug
+++ b/views/about.pug
@@ -8,11 +8,20 @@ block content
     p(style='text-align: center') 24-ish web dude, drinks teas and presses keys
     p(style='text-align: center') Sometimes ventures outside
     div(class='social')
-      span emails&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
-      a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
-      br
-      span toots&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
-      a(href='https://merveilles.town/users/drisc' class='outbound') @drisc@merveilles.town
-      br
-      span tweets&nbsp;&nbsp;&bullet;&nbsp;&nbsp;&nbsp;
-      a(href='https://twitter.com/driscio' class='outbound') @driscio
+      table(style='text-align:right; margin: auto auto; border-collapse: collapse')
+          tr
+            td(style='border-right: 1px solid white; padding-right: 4px;') emails
+            td(style='text-align: left')
+              a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
+          tr
+            td(style='border-right: 1px solid white; padding-right: 4px;') toots
+            td(style='text-align: left')
+              a(href='https://merveilles.town/users/drisc' class='outbound') @drisc@merveilles.town
+          tr
+            td(style='border-right: 1px solid white; padding-right: 4px;') github
+            td(style='text-align: left')
+              a(href='https://github.com/drisc' class='outbound') @drisc
+          tr
+            td(style='border-right: 1px solid white; padding-right: 4px;') tweets
+            td(style='text-align: left')
+              a(href='https://twitter.com/driscio' class='outbound') @driscio
