Changed creators table to list

--- a/views/wiki/retejo.pug
+++ b/views/wiki/retejo.pug
@@ -28,18 +28,9 @@ block content
 
     div
       h2 Externals
-      p This site uses and builds upon several external projects, below is a table of things being used along with their creators. Go check them out!
-      table(class='creators-tbl')
-        tr
-          th Resource
-          th Type
-          th Creator
-        tr
-          td Battalion Mono
-          td Font
-          td <a class='outbound' href='https://craze.co.uk'>Rutherford Craze</a>
-        tr
-          td Tablatal
-          td Flat File Database
-          td <a class='outbound' href='https://wiki.xxiivv.com/'>Devine Lu Linvega</a>
+      p This site uses and builds upon several external projects, below is a list of things being used along with their creators. Go check them out!
+      
+      ul(style='list-style:none; padding:0;')
+        li Battalion Mono - <a class='outbound' href='https://craze.co.uk'>Rutherford Craze</a>
+        li Tablatal - <a class='outbound' href='https://wiki.xxiivv.com/'>Devine Lu Linvega</a>
 
