[retejo] Shortened pre block on example

--- a/views/systems/calendar.pug
+++ b/views/systems/calendar.pug
@@ -30,4 +30,6 @@ block content
       p To find the current date for an epoch simply use the following equation: <code>⊙Days / 400</code>.
       p The resulting decimal, when read left to right will display the current year and the month which is the first decimal place plus one. The last three digits can be diveded by <code>25</code> to show the current day within the month.
       h4 Example
-      pre ⊙8727/400 = 21.8175 or Year 21 • Month 9 • Day 7
+      pre ⊙8727/400 = 21.8175
+      p or
+      pre Year 21 • Month 9 • Day 7
