[layout] Added font-awesome-v4.7

--- a/views/templates/layout.pug
+++ b/views/templates/layout.pug
@@ -6,6 +6,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
     // Multi Size ICO (Modern Browsers)
     link(rel='icon', type='image/x-icon', sizes='16x16 32x32', href='/images/favicons/favicon.ico')
     // Old Chrome
