--- a/views/wiki/straal.pug
+++ b/views/wiki/straal.pug
@@ -2,20 +2,16 @@ extends ../templates/layout
 
 block content
   .content
-    div.wiki-header
+    .wiki-header
       img(src='/images/icons/wiki/straal.svg')
       h1(style='text-align:center') The Constellation
     div
-      h2(style='text-align:center') Core
+      h2(style='text-align:center') Central
       ul.catagories
         li.wiki-item
           img(src='/images/icons/wiki/straal/sol.svg')
           span.wiki-label Sol
           span.wiki-desc Mac Mini
-        li.wiki-item
-          img(src='/images/icons/wiki/straal/altair.svg')
-          span.wiki-label Altair
-          span.wiki-desc iPhone X
         li.wiki-item
           img(src='/images/icons/wiki/straal/vega.svg')
           span.wiki-label Vega
@@ -27,29 +23,15 @@ block content
           span.wiki-label Naos
           span.wiki-desc Raspberry Pi 3
         li.wiki-item
-          img(src='/images/icons/wiki/straal/merope.svg')
-          span.wiki-label Merope
-          span.wiki-desc iPad Pro 10.5 inch
+          img(src='/images/icons/wiki/straal/altair.svg')
+          span.wiki-label Altair
+          span.wiki-desc iPhone X
         li.wiki-item
-          img(src='/images/icons/wiki/straal/sirius.svg')
-          span.wiki-label Sirius
-          span.wiki-desc ThinkPad X201
-      h2(style='text-align:center') Stargates
+          img(src='/images/icons/wiki/straal/naos.svg')
+          span.wiki-label Sargas
+          span.wiki-desc Pi 3 B+ Portable
+      h2(style='text-align:center') Anchor
       ul.catagories
-        li.wiki-item
-          img(src='/images/icons/router.svg')
-          span.wiki-label Yytris
-          span.wiki-desc edgeRouter Lite 3-Port
-        li.wiki-item
-          img(src='/images/icons/switch.svg')
-          span.wiki-label Ako
-          span.wiki-desc *yet to be purchased switch*
-      h2(style='text-align:center') Anchors
-      ul.catagories
-        li.wiki-item
-          img(src='/images/icons/wiki/straal/fornax.svg')
-          span.wiki-label Fornax
-          span.wiki-desc HP DL380 G7
         li.wiki-item
           img(src='/images/icons/wiki/straal/centarus.svg')
           span.wiki-label Centarus
@@ -59,4 +41,4 @@ block content
         li.wiki-item
           img(src='/images/icons/wiki/straal/rigel.svg')
           span.wiki-label Rigel
-          span.wiki-desc Linode VPS Server
+          span.wiki-desc Linode VPS
