[style] Added styling for search box, currently non-functional

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -161,6 +161,20 @@ a:hover .webring
   -moz-transition .2s
   -webkit-transition .2s
   transition .2s
+.nav form 
+  justify-self left
+  align-self center
+.search
+  width 125px
+  height 30px
+  margin-left 15px
+  border 1px solid #666
+  background #1b1819
+  color #EEE
+  border-radius 3px
+  text-indent 5px
+.search::placeholder
+  text-align left
 
 /*
   Site Layout
