--- a/views/wiki/sargas.pug
+++ b/views/wiki/sargas.pug
@@ -2,4 +2,19 @@ extends ../templates/layout
 
 block content
   .content
-    h1 Pug
+    .wiki-header
+      img(src='')
+    .wiki-project-status
+      ul.w-p-s-list
+        li.w-p-s-item
+          span VER&nbsp;&bullet;&nbsp; 
+          span 0.0.1
+        li.w-p-s-item
+          span STATUS&nbsp;&bullet;&nbsp; 
+          span InDev
+    div
+      h1 Sargas | Portable Workstation
+      .under-title
+        span Nano Terminal
+      p A small workstation based around a Raspberry Pi 3 B+, with a 7" screen housed in the SmartPi display case.
+      p The Smart Pi case is only temporary, a new case will be designed and printed which will allow for an on-board battery, speaker and better power management.
