[libsis] Added book icon to wiki-header

--- a/views/wiki/libsis.pug
+++ b/views/wiki/libsis.pug
@@ -2,6 +2,8 @@ extends ../templates/layout
 
 block content
   .content
+    .wiki-header
+      img(src='/images/icons/wiki/book.svg')
     h1 Reading List
     .under-title
       span To Future Me: Read more Non-Fiction
