[wiki] Moved part of wiki page h1 tags to .under-title

--- a/views/wiki/bookmarks.pug
+++ b/views/wiki/bookmarks.pug
@@ -3,3 +3,5 @@ extends ../templates/layout
 block content
   .content
     h1 Bookmarks
+    .under-title
+      span Interesting things to look at later
