--- a/views/wiki/paviderm.pug
+++ b/views/wiki/paviderm.pug
@@ -13,7 +13,9 @@ block content
           span STATUS&nbsp;&bullet;&nbsp; 
           span Research
     div
-      h1 Paviderm | Terminal Mastodon Client
+      h1 Paviderm
+      .under-title
+        span Terminal Mastodon Client
       p Paviderm is an idea I've had floating around in my head for a while now. A small light CLI Mastodon client, capable of displaying links to photos and rendering the alt-text that is included with pictures for accessability, have a seperate column for favs/boost/replies and be nice to look at.
 
       p I'm hoping to use it as my first big project in Rust.
