--- a/views/wiki/sargas.pug
+++ b/views/wiki/sargas.pug
@@ -13,8 +13,8 @@ block content
           span STATUS&nbsp;&bullet;&nbsp; 
           span InDev
     div
-      h1 Sargas | Portable Workstation
+      h1 Sargas
       .under-title
-        span Nano Terminal
+        span Portable Workstation
       p A small workstation based around a Raspberry Pi 3 B+, with a 7" screen housed in the SmartPi display case.
       p The Smart Pi case is only temporary, a new case will be designed and printed which will allow for an on-board battery, speaker and better power management.
