--- a/views/wiki/tools.pug
+++ b/views/wiki/tools.pug
@@ -3,3 +3,5 @@ extends ../templates/layout
 block content
   .content
     h1 Tools
+    .under-title
+      span Various things that I use to get other things done
