[wiki] Added goals

--- a/views/wiki.pug
+++ b/views/wiki.pug
@@ -16,6 +16,7 @@ block content
         h2 Self
         <hr>
         ul
+          li <a href='/wiki/goals'>Goals</a>
           li <a href='/wiki/libsis'>Reading List</a>
           li <a href='/wiki/bookmarks'>Bookmarks</a>
           li <a href='/wiki/straal'>Straal</a>
