--- a/views/wiki/goals.pug
+++ b/views/wiki/goals.pug
@@ -15,6 +15,7 @@ block content
       li Finish thirty books
       li Reduce the amount of times I eat meat in a week to three
       li Complete ten projects to a satisfactory level
+      li Learn to Sail
     h3 Monthly
     ul
       li Go out and take photos in a new location
