[wiki] Reverted index page and changed recent project

--- a/views/wiki.pug
+++ b/views/wiki.pug
@@ -7,11 +7,11 @@ block content
         h2 Projects
         <hr>
         ul
-          li(class='wiki-latest-project') Recent | <a href='/wiki/retejo'>Retejo</a>
+          li(class='wiki-latest-project') Recent | <a href='/wiki/procul'>Procul</a>
           li <a href='/wiki/humes'>Humes</a>
           li <a href='/wiki/retejo'>Retejo</a>
           li <a href='/wiki/sargas'>Sargas</a>
-          li <a href='/wiki/paviderm'>Paviderm</a>
+          li <a href='/wiki/procul'>Procul</a>
       .wiki-index-self
         h2 Self
         <hr>
