Updated reading list

--- a/views/wiki/libsis.pug
+++ b/views/wiki/libsis.pug
@@ -11,10 +11,9 @@ block content
     h2 Currently Reading
     ul
       li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Zen &amp; The Art of Motorcycle Repair - Robert M. Pirsig
-      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> A Wizard of Earthsea - Ursula K. Le Guin
+      li <i class="fa fa-book fa-fw" aria-hidden="true"></i> Is That Bike Diesel, Mate? - Paul Carter
       li <i class="fa fa-book fa-fw" aria-hidden="true"></i> Rotherweird - Andrew Caldecott
       li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> Nine Fox Gambit - Yoon Ha Lee
-      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> The Dark Tower VII: The Dark Tower - Stephen King
     <hr>
     h2 To Read
     h3 Non-Fiction
@@ -37,6 +36,13 @@ block content
       li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> Paper Girls - <i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Brian K. Vaughan , <i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i> Cliff Chiang 
       li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> ApocalyptiGirl: An Aria for the End Times - Andrew MacLean
     hr
+    h2 Read in 2019
+    p Goal || 3/30
+    h4 Fiction - Fantasy
+    ul
+      li <i class="fa fa-tablet fa-fw" aria-hidden="true"></i> A Wizard of Earthsea - Ursula K. Le Guin
+      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> On the Shoulders of Titans - Andrew Rowe
+      li <i class="fa fa-headphones fa-fw" aria-hidden="true"></i> The Dark Tower VII: The Dark Tower - Stephen King
     h2 Read in 2018
     h4 Fiction - Sci-Fi
     ul
