--- a/views/tidbits/footer.pug
+++ b/views/tidbits/footer.pug
@@ -1,13 +1,13 @@
 mixin footer
   footer
     .footer-date
-      a(href='/systems/calendar' title='Afiur Date') 
+      a(href='/systems/calendar' title='Afiur Date')
         span ⊙
           script.
             document.write(afiur.date());
     .footer-licence
       b
         a(href='https://creativecommons.org/licenses/by-nc-sa/4.0/') BY-NC-SA 4.0
-    .footer-right
-      b 
-        em Things a'changin
+    .footer-links
+      a.icon.merveilles(href='https://merveilles.town/@drisc' title='Merveilles Mastodon Instance')
+      a.icon.webring(href='https://webring.xxiivv.com/' title='Merveilles Webring')
