--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -9,8 +9,5 @@ mixin nav
         a(href='/wiki')
           span Wiki
       li.nav-item
-        a(href='/about')
-          span About
-      li.nav-item
-        a(href='http://webring.xxiivv.com/' title='Webring')
-         img.webring(src='/images/icons/webring.svg' alt='Webring')
+        a(href='/self')
+          span Self
