Updated wiki page, changed about page to self

--- a/views/about.pug
+++ b/views/about.pug
@@ -5,23 +5,30 @@ block content
     img(src='/images/me/self_20180916.jpg' title='A Person, name of Driscoll')
   .about
     h1 Cory Driscoll
-    p(style='text-align: center') 24-ish web dude, drinks teas and presses keys
-    p(style='text-align: center') Sometimes ventures outside
-    div(class='social')
-      table(style='text-align:right; margin: auto auto; border-collapse: collapse')
-          tr
-            td(style='border-right: 1px solid white; padding-right: 4px;') emails
-            td(style='text-align: left')
-              a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
-          tr
-            td(style='border-right: 1px solid white; padding-right: 4px;') toots
-            td(style='text-align: left')
-              a(href='https://merveilles.town/users/drisc' class='outbound') @drisc@merveilles.town
-          tr
-            td(style='border-right: 1px solid white; padding-right: 4px;') github
-            td(style='text-align: left')
-              a(href='https://github.com/drisc' class='outbound') @drisc
-          tr
-            td(style='border-right: 1px solid white; padding-right: 4px;') tweets
-            td(style='text-align: left')
-              a(href='https://twitter.com/driscio' class='outbound') @driscio
+    p(style='text-align: center') 24, drinks tea and presses keys.
+    .index-list
+      ul(style='list-style-type:none; text-align:center; padding:0;')
+        li <a href='/wiki/goals'>Goals</a>
+        li <a href='/wiki/libsis'>Reading List</a>
+        li <a href='/wiki/bookmarks'>Bookmarks</a>
+        li <a href='/wiki/straal'>Straal</a>
+
+    hr
+
+    table(style='text-align:right; margin: auto auto; border-collapse: collapse')
+        tr
+          td(style='border-right: 1px solid white; padding-right: 4px;') emails
+          td(style='text-align: left')
+            a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
+        tr
+          td(style='border-right: 1px solid white; padding-right: 4px;') toots
+          td(style='text-align: left')
+            a(href='https://merveilles.town/users/drisc' class='outbound') @drisc@merveilles.town
+        tr
+          td(style='border-right: 1px solid white; padding-right: 4px;') github
+          td(style='text-align: left')
+            a(href='https://github.com/drisc' class='outbound') @drisc
+        tr
+          td(style='border-right: 1px solid white; padding-right: 4px;') tweets
+          td(style='text-align: left')
+            a(href='https://twitter.com/driscio' class='outbound') @driscio
